2003-02-24  John Harper  <jsh@unfactored.org>

	* sawfish/wm/state/wm-spec.jl (init): set WM_NAME as
	UTF8_STRING property, not STRING. Patch from Christian Krause
	<chkr@plauener.de>

2003-02-19  John Harper  <jsh@unfactored.org>

	Added support for task-list-skip property. Adapted from a patch
	sent to sawfish mailing list originally by Chris Boyle:

	* sawfish/wm/state/wm-spec.jl: support SKIP_TASKBAR state

	* sawfish/wm/state/ignored.jl (toggle-task-list-skip): new
	function and command

	* sawfish/wm/state/gnome.jl: support task-list-skip property
	instead of ad hoc hint setting

	* sawfish/wm/ext/match-window.jl: added task-list-skip property

2003-02-06  John Harper  <jsh@unfactored.org>

	* sawfish/wm/commands/gnome.jl (gnome-logout): save-session got
	renamed to gnome-session-save in gnome 2

2003-02-03  John Harper  <jsh@unfactored.org>

	* sawfish/wm/gnome/menus.jl (gnome-share-directory): if the
	method of finding the gnome share directory fails, default to
	/usr/gnome

2003-01-26  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/window-history.jl (window-history-key):
	changed formatting so that some compatibility is kept with old
	keys (except for transient windows)

2003-01-15  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/workspace-grid.jl (num-workspace-rows):
	removed libwnck workaround at request of Michael Toomin

2003-01-14  John Harper  <jsh@unfactored.org>

	* sawfish/wm/ext/window-history.jl (window-history-key,
	window-history-key-property): the variable may now be a list,
	in which case the list of named properties is used as the key.
	It now defaults to (WM_CLASS WM_WINDOW_ROLE)

2003-01-12  John Harper  <jsh@unfactored.org>

	* sawfish/wm/placement.jl: applied patch from Steve Hill
	<firefury@sucs.org> to make several placement modes use the
	current-head, not the head of the placed window

2002-11-13  John Harper  <jsh@unfactored.org>

	Merged from HEAD:

	* sawfish/wm/windows.jl (adjust-position-for-gravity/y): fixed