@@ -1,3 +1,11 @@
+2003-03-16  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm/workspace.jl (show-desktop, hide-desktop,
+	showing-desktop-p): implement the "showing desktop" mode
+
+	* sawfish/wm/state/wm-spec.jl: implement _NET_SHOWING_DESKTOP
+	property
+
 2003-02-24  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/state/wm-spec.jl (init): set WM_NAME as
